--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,14 @@
 ---
 layout: default
 ---
-<div id="home" class="grid post">
-	<div class="unit whole">
-		{{ content }}
-	</div>
-</div>
+<article class="post">
+
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+  </header>
+
+  <div class="post-content">
+    {{ content }}
+  </div>
+
+</article>
