--- a/_includes/post_tags.html
+++ b/_includes/post_tags.html
@@ -1,6 +1,6 @@
 {% if post.tags != empty %}
 <img src="{{ site.baseurl }}/imgs/tag.png" />
   {% for tag in post.tags %}
-	<a class="post-meta" href="/tag/{{ tag }}">{{ tag }}</a> 
+	<a class="post-meta" href="{{ site.baseurl }}/tag/{{ tag }}">{{ tag }}</a> 
   {% endfor %}
 {% endif %}
