--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -1,21 +1,22 @@
 ---
 layout: default
 ---
-  <h1 class="page-heading">{{page.title}}</h1>
+<h1 class="page-heading">{{page.title}}</h1>
+<!-- FROM TAG INDEX -->
 
-  <ul class="post-list">
-    {% for post in site.posts %}
-      {% for tag in post.tags %}
-        {% if tag == page.tag %}
-        <li>
-          <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
-          <span class="post-meta right">{% include post_tags.html %}</span>
+<ul class="post-list">
+  {% for post in site.posts %}
+    {% for tag in post.tags %}
+      {% if tag == page.tag %}
+      <li>
+        <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+        <span class="post-meta right">{% include post_tags.html %}</span>
 
-          <h2>
-            <a class="post-link" href='{{ post.url | prepend: site.baseurl }}'>{{ post.title }}</a>
-            <p class="summary">{{post.summary}}</p>
-          </h2>
-        </li>
+        <h2>
+          <a class="post-link" href='{{ post.url | prepend: site.baseurl }}'>{{ post.title }}</a>
+          <p class="summary">{{post.summary}}</p>
+        </h2>
+      </li>
       {% endif %}
     {% endfor %}
   {% endfor %}
