--- a/_includes/post_tags.html
+++ b/_includes/post_tags.html
@@ -1,6 +1,8 @@
+{% assign post = page %}
 {% if post.tags != empty %}
+<!-- {{ post.tags | join: ', ' }} -->
 <img src="{{ site.baseurl }}/imgs/tag.png" />
   {% for tag in post.tags %}
-	<a class="post-meta" href="{{ site.baseurl }}/tag/{{ tag }}">{{ tag }}</a> 
+	<a class="post-meta" href="{{ site.baseurl }}/tag?t={{ tag }}">{{ tag }}</a> 
   {% endfor %}
 {% endif %}
