--- a/_includes/post_tags.html
+++ b/_includes/post_tags.html
@@ -1,7 +1,5 @@
-{% assign post = page %}
-{% if post.tags != empty %}
-  <img src="{{ site.baseurl }}/img/tag.png" />
-  {% for tag in post.tags %}<a class="post-meta" href="{{ site.baseurl }}/tag?t={{ tag }}">{{ tag }}</a>{% unless forloop.last %}, 
-  {% endunless %} 
-  {% endfor %}
-{% endif %}
+	{% assign post = page %}
+	{% if post.tags != empty %}		<img src="{{ site.baseurl }}/img/tag.png" />
+	  {% for tag in post.tags %}		<a class="post-meta" href="{{ site.baseurl }}/tag?t={{ tag }}">{{ tag }}</a>{% unless forloop.last %}, 
+	  {% endunless %}{% endfor %}
+	{% endif %}
