--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
       <div class="footer-col footer-col-1">
         <ul class="social-media-list">{% for socialmedia in site.social %}
-            {% if socialmedia.url == "" %}{% assign url = socialmedia.platform | append: ".com" %}{% else %}{% assign url = socialmedia.url %}{% endif %}
+            {% if socialmedia.url == nil %}{% assign url = socialmedia.platform | append: ".com" %}{% else %}{% assign url = socialmedia.url %}{% endif %}
             <a href="https://{{ url }}/{{ socialmedia.user }}">
               <span class="icon icon--{{ socialmedia.platform }}">
                 <img src="{{ site.baseurl }}/img/36/{{ socialmedia.platform }}-icon.png" />
